--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Sentry Config File
+.sentryclirc
+
+# Prisma
+/prisma/migrations/
+*.db
+*.db-journal
